--- a/select2/select2.css
+++ b/select2/select2.css
@@ -20,10 +20,10 @@ Version: 3.4.5 Timestamp: Mon Nov  4 08:22:42 PST 2013
     container without overlap because of margin/padding.
 
     More Info : http://www.quirksmode.org/css/box.html
-  */
-  -webkit-box-sizing: border-box; /* webkit */
-     -moz-box-sizing: border-box; /* firefox */
-          box-sizing: border-box; /* css3 */
+    */
+    -webkit-box-sizing: border-box; /* webkit */
+    -moz-box-sizing: border-box; /* firefox */
+    box-sizing: border-box; /* css3 */
 }
 
 .select2-container .select2-choice {
@@ -44,10 +44,10 @@ Version: 3.4.5 Timestamp: Mon Nov  4 08:22:42 PST 2013
     background-clip: padding-box;
 
     -webkit-touch-callout: none;
-      -webkit-user-select: none;
-         -moz-user-select: none;
-          -ms-user-select: none;
-              user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 
     background-color: #fff;
     background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0, #eee), color-stop(0.5, #fff));
@@ -142,7 +142,7 @@ Version: 3.4.5 Timestamp: Mon Nov  4 08:22:42 PST 2013
     border-radius: 0 0 4px 4px;
 
     -webkit-box-shadow: 0 4px 5px rgba(0, 0, 0, .15);
-            box-shadow: 0 4px 5px rgba(0, 0, 0, .15);
+    box-shadow: 0 4px 5px rgba(0, 0, 0, .15);
 }
 
 .select2-drop-auto-width {
@@ -162,7 +162,7 @@ Version: 3.4.5 Timestamp: Mon Nov  4 08:22:42 PST 2013
     border-radius: 4px 4px 0 0;
 
     -webkit-box-shadow: 0 -4px 5px rgba(0, 0, 0, .15);
-            box-shadow: 0 -4px 5px rgba(0, 0, 0, .15);
+    box-shadow: 0 -4px 5px rgba(0, 0, 0, .15);
 }
 
 .select2-drop-active {
@@ -231,7 +231,7 @@ Version: 3.4.5 Timestamp: Mon Nov  4 08:22:42 PST 2013
     border-radius: 0;
 
     -webkit-box-shadow: none;
-            box-shadow: none;
+    box-shadow: none;
 
     background: #fff url('select2.png') no-repeat 100% -22px;
     background: url('select2.png') no-repeat 100% -22px, -webkit-gradient(linear, left bottom, left top, color-stop(0.85, #fff), color-stop(0.99, #eee));
@@ -258,13 +258,13 @@ Version: 3.4.5 Timestamp: Mon Nov  4 08:22:42 PST 2013
     outline: none;
 
     -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, .3);
-            box-shadow: 0 0 5px rgba(0, 0, 0, .3);
+    box-shadow: 0 0 5px rgba(0, 0, 0, .3);
 }
 
 .select2-dropdown-open .select2-choice {
     border-bottom-color: transparent;
     -webkit-box-shadow: 0 1px 0 #fff inset;
-            box-shadow: 0 1px 0 #fff inset;
+    box-shadow: 0 1px 0 #fff inset;
 
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
@@ -340,10 +340,10 @@ Version: 3.4.5 Timestamp: Mon Nov  4 08:22:42 PST 2013
     min-height: 1em;
 
     -webkit-touch-callout: none;
-      -webkit-user-select: none;
-         -moz-user-select: none;
-          -ms-user-select: none;
-              user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .select2-results .select2-highlighted {
@@ -454,7 +454,7 @@ disabled look for disabled choices in the results dropdown
     outline: none;
 
     -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, .3);
-            box-shadow: 0 0 5px rgba(0, 0, 0, .3);
+    box-shadow: 0 0 5px rgba(0, 0, 0, .3);
 }
 .select2-container-multi .select2-choices li {
     float: left;
@@ -476,7 +476,7 @@ disabled look for disabled choices in the results dropdown
     outline: 0;
     border: 0;
     -webkit-box-shadow: none;
-            box-shadow: none;
+    box-shadow: none;
     background: transparent !important;
 }
 
@@ -501,15 +501,15 @@ disabled look for disabled choices in the results dropdown
     border-radius: 3px;
 
     -webkit-box-shadow: 0 0 2px #fff inset, 0 1px 0 rgba(0, 0, 0, 0.05);
-            box-shadow: 0 0 2px #fff inset, 0 1px 0 rgba(0, 0, 0, 0.05);
+    box-shadow: 0 0 2px #fff inset, 0 1px 0 rgba(0, 0, 0, 0.05);
 
     background-clip: padding-box;
 
     -webkit-touch-callout: none;
-      -webkit-user-select: none;
-         -moz-user-select: none;
-          -ms-user-select: none;
-              user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 
     background-color: #e4e4e4;
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#eeeeee', endColorstr='#f4f4f4', GradientType=0);
@@ -674,3 +674,52 @@ div#s2id_select2 {
     white-space: nowrap;
 }
 */
+
+
+.hlisting {
+    margin: 0 !important;
+    background-color: #FFF;
+}
+
+body.serps form .hproduct .summary {
+    line-height: 0 !important;
+}
+
+body.serps form .hproduct .price-info {
+    margin-top: 12px !important;
+}
+
+body.serps form .hproduct {
+    padding-top: 10px !important;
+}
+
+
+body.serps form .hproduct .description {
+    clear: none;
+}
+
+body.serps form .hproduct ul.description {
+    width: 40%;
+    margin: 0;
+    float: left;
+}
+body.serps form .hproduct ul.description-right {
+    width: 40%;
+    margin: 0;
+    float: right !important;
+}
+
+body.serps form .hproduct .description li {
+    width: 100%;
+}
+
+
+.header .x #branding {
+    max-width: 320px;
+    height: 38px;
+    background-size: 100%;
+}
+
+.header {
+    min-height: 45px;
+}
