--- a/select2/select2.css
+++ b/select2/select2.css
@@ -95,7 +95,7 @@ Version: 3.4.5 Timestamp: Mon Nov  4 08:22:42 PST 2013
     text-decoration: none;
 
     border: 0;
-    background: url('select2.png') right top no-repeat;
+    background: #000 right top no-repeat;
     cursor: pointer;
     outline: 0;
 }
@@ -199,7 +199,7 @@ Version: 3.4.5 Timestamp: Mon Nov  4 08:22:42 PST 2013
     display: block;
     width: 100%;
     height: 100%;
-    background: url('select2.png') no-repeat 0 1px;
+    background: #000 no-repeat 0 1px;
 }
 
 .select2-search {
@@ -233,11 +233,11 @@ Version: 3.4.5 Timestamp: Mon Nov  4 08:22:42 PST 2013
     -webkit-box-shadow: none;
     box-shadow: none;
 
-    background: #fff url('select2.png') no-repeat 100% -22px;
-    background: url('select2.png') no-repeat 100% -22px, -webkit-gradient(linear, left bottom, left top, color-stop(0.85, #fff), color-stop(0.99, #eee));
-    background: url('select2.png') no-repeat 100% -22px, -webkit-linear-gradient(center bottom, #fff 85%, #eee 99%);
-    background: url('select2.png') no-repeat 100% -22px, -moz-linear-gradient(center bottom, #fff 85%, #eee 99%);
-    background: url('select2.png') no-repeat 100% -22px, linear-gradient(top, #fff 85%, #eee 99%);
+    background: #fff no-repeat 100% -22px;
+    background: #000 no-repeat 100% -22px, -webkit-gradient(linear, left bottom, left top, color-stop(0.85, #fff), color-stop(0.99, #eee));
+    background: #000 no-repeat 100% -22px, -webkit-linear-gradient(center bottom, #fff 85%, #eee 99%);
+    background: #000 no-repeat 100% -22px, -moz-linear-gradient(center bottom, #fff 85%, #eee 99%);
+    background: #000 no-repeat 100% -22px, linear-gradient(top, #fff 85%, #eee 99%);
 }
 
 .select2-drop.select2-drop-above .select2-search input {
@@ -535,7 +535,7 @@ disabled look for disabled choices in the results dropdown
 
     font-size: 1px;
     outline: none;
-    background: url('select2.png') right top no-repeat;
+    background: #000 right top no-repeat;
 }
 
 .select2-container-multi .select2-search-choice-close {
@@ -722,4 +722,19 @@ body.serps form .hproduct .description li {
 
 .header {
     min-height: 45px;
+}
+
+
+.select2-search-choice-close {
+    width: 20px;
+    height: 20px;
+    background-repeat: no-repeat;
+    border-width: 15px;
+    top: 3px;
+}
+.select2-container-multi .select2-choices .select2-search-choice {
+    line-height: 20px;
+}
+.select2-container-multi .select2-choices .select2-search-choice div {
+    padding-left: 7px;
 }
