--- a/app/styles/treasure.scss
+++ b/app/styles/treasure.scss
@@ -6,3 +6,25 @@ input#search {
   display: block;
   left: 0;
 }
+
+.chosen-container .chosen-results li {
+  line-height: 23px;
+}
+
+.chosen-container-multi .chosen-choices li.search-choice {
+  margin: 0;
+  margin-right: 2px;
+  padding: 7px;
+  padding-right: 20px;
+  background-image: none;
+  background-color: rgb(200, 240, 220);
+  border: none;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+
+.chosen-container {
+  font-size: 18px;
+}
